--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,6 @@
   --third-text-color: #E5E5E5;
   --fourth-text-color: #ffffff;
   --fifth-text-color: rgba(255, 255, 255, 0.6);
-
- 
-  
- 
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -27,7 +23,7 @@ body {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.19px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color:var(--accent-color);
 }
@@ -35,7 +31,7 @@ body {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.19px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color:var(--main-tittle-color);
 }
@@ -43,7 +39,6 @@ body {
   color: var(--accent-color);
 }
 .header-link{
-font-family: Roboto;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -56,7 +51,6 @@ color:var(--main-tittle-color);
 }
 
 .header-mail-tel a {
-font-family: Roboto;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -72,7 +66,6 @@ color: var(--tittle-text-color);
   background-color:var(--first-text-color);
 }
  .hero-text{
-font-family: Roboto;
 font-style: normal;
 font-weight: 900;
 font-size: 44px;
@@ -84,7 +77,6 @@ color:var(--fourth-text-color);
 background-color:var(--first-text-color) ;
 }
 .hero-btn{
-  font-family: Roboto;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.87;
@@ -96,25 +88,22 @@ color:var(--fourth-text-color);
 background-color:var(--accent-color);
  cursor: pointer;
 }
-
  /* ----------------------------------------------------------------ADVANTAGE----------------------- */
 .advantage{
   background-color: var(--third-text-color);
 }
 
  .advantage-pre-tittle{
-  font-family: Roboto;
 font-weight: 700;
 font-size: 14px;
-line-height: 1.14px;
+line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color:var(--main-tittle-color);
 }
 .advantage-tittle{
-  font-family: Roboto;
 font-size: 14px;
-line-height: 1.71px;
+line-height: 1.71;
 letter-spacing: 0.03em;
 color:var(--tittle-text-color);
 }
@@ -123,7 +112,6 @@ color:var(--tittle-text-color);
 background-color: var(--third-text-color);
 }
  .examples-text{
-  font-family: Roboto;
 font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
@@ -136,7 +124,6 @@ color:var(--main-tittle-color);
   background-color: var(--second-text-color);
 }
  .team-text{
-  font-family: Roboto;
 font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
@@ -146,7 +133,6 @@ color:var(--main-tittle-color);
 }
 
 .team-aftertext{
-  font-family: Roboto;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.19;
@@ -155,7 +141,7 @@ letter-spacing: 0.03em;
 color:var(--main-tittle-color);
 }
 .team-pretext {
-  font-family: Roboto;
+  font-weight: 400;
 font-size: 16px;
 line-height: 1.19;
 text-align: center;
@@ -174,7 +160,6 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 color:var(--accent-color);
 }
-
 .footer-studio{
 font-family: Raleway;
 font-weight: 700;
@@ -184,48 +169,46 @@ letter-spacing: 0.03em;
 color:var(--fourth-text-color);
 }
 .footer-gps {
-font-family: Roboto;
+  font-family: Roboto;
 font-style: normal;
-font-weight: normal;
+font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color:var(--fourth-text-color);
 }
 .footer-mail{
-font-family: Roboto;
+  font-family: Roboto;
 font-style: normal;
-font-weight: normal;
+font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color:var(--fifth-text-color);
 }
 .footer-tel{
-font-family: Roboto;
+  font-family: Roboto;
 font-style: normal;
-font-weight: normal;
+font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color:var(--fifth-text-color);
 }
+/* -------------------------------ПОРТФОЛИО----------------- */
 .main-menu{
   background-color:var(--third-text-color);
 }
-.main-menu-item{
+.main-btn{
   font-family: Roboto;
 font-weight: 500;
 font-size: 16px;
-line-height: 1.62px;
+line-height: 1.62;
 letter-spacing: 0.03em;
 color:var(--main-tittle-color);
-
 }
-
 .main-btn{
-  cursor: pointer;
-}
+  cursor: pointer;}
 .main-btn:hover,
 .main-btn:focus{
   color:var(--accent-color)
@@ -238,13 +221,9 @@ line-height: 2.0;
 letter-spacing: 0.06em;
 color:var(--main-tittle-color);
 background-color: var(--fourth-text-color);
-
 }
-
-.portfolio-pretext{
-  font-family: Roboto;
-font-style: normal;
-font-weight: normal;
+.portfolio-pretext{font-family: Roboto;
+font-weight: 400;
 font-size: 16px;
 line-height: 1.87;
 letter-spacing: 0.03em;
